# boda-boda-app

./: .empty_files.txt  .env  .gitignore  AGENTS.md  CLAUDE.md  README.md  celery_app.py  empty-files.txt  pyproject.toml  render.yaml  requirements.txt  run.py  tmp_pydantic_test.py  tmp_pydantic_test2.py  tmp_pydantic_test_env.py
.github/: copilot-instructions.md
app/: README.md  main.py
app/core/: config.py  database.py  logging_config.py  permissions.py  security.py
app/exceptions/: __init__.py  exceptions.py
app/models/: __init__.py  asset.py  audit_log.py  event_contribution.py  group_settings.py  inventory_item.py  loan.py  rental_booking.py  subscription_payment.py  transaction.py  user.py  welfare_event.py
app/repositories/: base_repository.py  inventory_repository.py  loan_repository.py  rental_repository.py  user_repository.py  welfare_repository.py
app/routers/: auth_router.py  financial_router.py  mpesa_router.py  rental_router.py  report_router.py  savings_loan_router.py  user_router.py  welfare_router.py
app/schemas/: __init__.py  auth.py  base.py  financial.py  loan.py  rental.py  transaction.py  user.py  welfare.py
app/services/: __init__.py  asset_service.py  auth_service.py  financial_service.py  inventory_service.py  loan_service.py  notification_service.py  rental_service.py  (+5 more)
docs/: flutter_backend_guide.md
scripts/: seed_admin.py  seed_all.py
tests/: test_asset_service.py  test_eligibility_scorer.py  test_integration_eligibility.py  test_loan_assets.py  test_report_service.py  test_user_registration.py  test_welfare_proposals.py
(+12 files in other folders)
