[project]
name = "oteri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dezmils", email = "dez.ezra05@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.1.2",
]

[project.scripts]
oteri = "oteri:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
